--- a/quickclick/scss/style.scss
+++ b/quickclick/scss/style.scss
@@ -60,6 +60,12 @@ $phone-s-media: 479px;
   &:hover {
     opacity: 0.9;
   }
+  @media all and (max-width: $phone-media) {
+    width: 125px;
+    height: 45px;
+    line-height: 45px;
+    font-size: 1rem;
+  }
 }
 .btn--primary-xl {
   min-width: 150px;
@@ -238,6 +244,7 @@ input.default {
           bottom: -25px;
           left: 10px;
           font-size: $f-size-ss;
+          line-height: $f-size-m;
           color: #b5b5b5;
         }
         .more-features {
@@ -258,8 +265,9 @@ input.default {
         }
         .features-menu {
           display: none;
-          z-index: 1;
+          z-index: 2;
           position: absolute;
+          width: 210px;
           top: 47px;
           right: -12px;
           &::after {
@@ -494,6 +502,15 @@ input.default {
 
   @media all and (max-width: $phone-m-media) {
     padding: 15px;
+    .middle-content {
+      .menu-list {
+        .add-new-card {
+          p {
+            font-size: 1rem;
+          }
+        }
+      }
+    }
   }
 }
 
@@ -847,6 +864,14 @@ input.default {
     text-align: center;
   }
   @media all and (max-width: $pad-media) {
+    .top-title {
+      h4 {
+        font-size: $f-size-xl;
+      }
+    }
+    ul.choose-method li a p {
+      font-size: 1rem;
+    }
     ul.choose-store-list li {
       width: calc(33% - 12px);
     }
